--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,14 +1,14 @@
-/* .App {
+.App {
   text-align: center;
-} */
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
-/* 
-.App-header {
+
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
