--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  padding-left: 20%;
+  padding-right: 20%;
+  padding-top: 2%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
